# amber

./: .editorconfig  .env.local  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  PRODUCTION_OVERHAUL_SUMMARY.md  README.md  SKILLS.md  TAURI_MIGRATION_GUIDE.md  benchmark-results.json  dev.md  eslint.config.js  index.html  logo.aff.afdesign  metadata.json  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tim-40-sidecar-integration.json  tsconfig.json  vercel.json  vite.config.mts  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/helpers/: github-safe.js
.github/: dependabot.yml
.github/workflows/: codeql.yml  deploy-website.yml  lint.yml  release.yml  test.yml  typecheck.yml
.husky/: pre-commit
amber-sidecar/: Cargo.toml
amber-sidecar/src/: main.rs
benches/: database_benchmarks.rs  ipc_benchmarks.rs
docs/: DEVELOPMENT.md  PERFORMANCE.md  Performance-Test-Architecture.md  Performance-Testing-Guide.md  Performance-Testing-Quick-Start.md  README.md  SNAPSHOT_INDEXING_ANALYSIS.md  Typography-Quick-Reference.md  Typography-System-Summary.md  UI_COMPONENT_AUDIT_REPORT.md
docs/architecture/: BACKEND_ARCHITECTURE.md  DATA_FLOW.md  FUTURE_INDEX_ARCHITECTURE.md  THEME_ARCHITECTURE_ANALYSIS.md  (+3 more)
electron/: FileService.ts  JobScheduler.ts  KeychainService.ts  RcloneInstaller.ts  RcloneService.ts  SandboxService.ts  SnapshotService.ts  VolumeWatcher.ts  constants.ts  drive-watcher.ts  job-scheduler.ts  main.ts  preferences.ts  preload.ts  rsync-service.ts  store.ts  tsconfig.json  types.ts
frontend-benchmarks/: package.json
scripts/: batch-create.json  bench-rust.js  build-icons.js  build_release.sh  create-restore-sandbox.js  create-timeline-tickets.json  generate-mock-data.py  import-tickets.sh  linear.sh
shared/: version.ts
src/: App.tsx  electron.d.ts  index.css  types.js  types.ts
src-tauri/: Cargo.toml  rsync_service_patch.txt  tauri.conf.json
src-tauri/benches/: database_benchmarks.rs  file_service_benchmark.rs  index_benchmark.rs  ipc_benchmarks.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  error_tests.rs  lib.rs  state.rs  utils.rs
src-tauri/src/commands/: dev.rs  filesystem.rs  jobs.rs  manifest.rs  migration.rs  mod.rs  preferences.rs  rclone.rs  rsync.rs  snapshots.rs
src-tauri/src/security/: mod.rs  path_validation.rs
src-tauri/src/services/: cache_service.rs  data_dir.rs  dev_seed.rs  file_service.rs  index_service.rs  job_scheduler.rs  keychain_service.rs  manifest_service.rs  migration_service.rs  mod.rs  rclone_service.rs  rsync_service.rs  rsync_service.rs.backup  snapshot_service.rs  store.rs  tray_manager.rs  volume_watcher.rs
src-tauri/src/types/: job.rs  manifest.rs  mod.rs  preferences.rs  snapshot.rs
src-tauri/src/utils/: mod.rs  platform.rs  validation.rs
src-tauri/tests/: path_validation_tests.rs  security_test_custom_command.rs
src-tauri/tests/common/: generate.rs  mod.rs  verify.rs
src-tauri/tests/e2e/: common.rs  mod.rs  restore_tests.rs  rsync_tests.rs  time_machine_tests.rs
src-tauri/tests/fixtures/complex_backup/nested/level1/level2/: deep_file.txt
src-tauri/tests/fixtures/complex_backup/special/: file-with-dashes.txt  file.multiple.dots.txt
src-tauri/tests/fixtures/complex_backup/unicode/: émoji_file.txt  中文文件.txt
src-tauri/tests/fixtures/edge_cases/large_content/: large.txt
src-tauri/tests/fixtures/simple_backup/: config.json
src-tauri/tests/fixtures/simple_backup/documents/: notes.md  readme.txt
src-tauri/tests/integration/: common.rs  compare_tests.rs  index_tests.rs  manifest_tests.rs  mod.rs  snapshot_tests.rs
src-tauri/tests/integration/service_tests/: failure_recovery_tests.rs  index_service_tests.rs  manifest_service_tests.rs  mod.rs  rsync_service_tests.rs  snapshot_service_tests.rs
src-tauri/tests/stress/: common.rs  mod.rs  tests.rs
tests/: integration.test.js  integrity.test.ts  rsync-comprehensive.test.js  rsync-progress.test.ts  scheduler.test.ts  tsconfig.json  unit.test.js
tickets/: TIM-300-project-restructure.md  tauri-migration.md  tickets.json
website/: package-lock.json  package.json
(+293 files in other folders)
