[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
jwalk = "0.8"
rayon = "1"
num_cpus = "1"
base64 = "0.22"
open = "5"
shell-words = "1"
regex = "1"
dirs = "5"
# TIM-113: Job scheduler
tokio-cron-scheduler = "0.13"
# TIM-114: Keychain access
keyring = "3"
# TIM-115: Volume watcher
notify = "7"
# UUID for job scheduler
uuid = { version = "1", features = ["v4"] }
# TIM-46: SQLite metadata index for fast snapshot browsing
rusqlite = { version = "0.32", features = ["bundled"] }
# Dev seeding random data generation
rand = "0.8"
# Machine hostname for manifest
hostname = "0.4"
# Type-safe IPC (commented out until specta v2 stable)
# specta = { version = "=2.0.0-rc.22", features = ["chrono", "serde_json", "uuid"] }
# specta-typescript = "0.0.9"
# tauri-specta = { version = "=2.0.0-rc.21" }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "index_benchmark"
harness = false

[[bench]]
name = "file_service_benchmark"
harness = false
