[package]
name = "app"
version = "0.1.0"
description = "A modern, reliable rsync backup tool for macOS"
authors = ["Florian P. Mahner"]
license = "MIT"
repository = "https://github.com/amber-sync/amber"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
# MCP plugin for Claude Code integration (dev only)
# tauri-plugin-mcp = { path = "../../tauri-plugin-mcp", optional = true }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
jwalk = "0.8"
rayon = "1"
num_cpus = "1"
base64 = "0.22"
open = "5"
shell-words = "1"
regex = "1"
dirs = "5"
urlencoding = "2.1"
# TIM-113: Job scheduler
tokio-cron-scheduler = "0.13"
# TIM-114: Keychain access
keyring = "3"
# TIM-115: Volume watcher
notify = "7"
# UUID for job scheduler
uuid = { version = "1", features = ["v4"] }
# TIM-46: SQLite metadata index for fast snapshot browsing
rusqlite = { version = "0.32", features = ["bundled"] }
# Dev seeding random data generation
rand = "0.9"
# Machine hostname for manifest
hostname = "0.4"
# Parallel manifest loading
futures = "0.3"
# Type-safe IPC (commented out until specta v2 stable)
# specta = { version = "=2.0.0-rc.22", features = ["chrono", "serde_json", "uuid"] }
# specta-typescript = "0.0.9"
# tauri-specta = { version = "=2.0.0-rc.21" }

[features]
default = []
# mcp = ["tauri-plugin-mcp"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }
# TIM-222: Testing framework
rstest = "0.18"
assert_fs = "1.1"
predicates = "3.1"
proptest = "1.4"

[[bench]]
name = "index_benchmark"
harness = false

[[bench]]
name = "file_service_benchmark"
harness = false

[[bench]]
name = "database_benchmarks"
harness = false

[[bench]]
name = "ipc_benchmarks"
harness = false

# TIM-222: Test binaries
[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
